--- a/assets/css/less/awareness.less
+++ b/assets/css/less/awareness.less
@@ -6,78 +6,78 @@
 @cursorGreen: #33CC33;
 @selectionGreen: #B9DBB9;
 
- .mute-remote-cursor ***REMOVED***
+ .mute-remote-cursor {
 	position: absolute;
 	z-index: 2;
-	.name ***REMOVED***
+	.name {
 		font-size: 0.8em;
 		color: white;
 		padding: 2px 6px;
 		border-radius: 3px 3px 3px 0;
 		position: absolute;
 		left: -4px;
-	***REMOVED***
-	.nubbin ***REMOVED***
+	}
+	.nubbin {
 		height: 6px;
 		width: 6px;
 		position: absolute;
 		left: -4px;
-	***REMOVED***
-***REMOVED***
+	}
+}
 
-.mute-remote-selection ***REMOVED***
+.mute-remote-selection {
   position: absolute;
   z-index: 2;  
-***REMOVED***
-.mute-collaborator-indicator ***REMOVED***
+}
+.mute-collaborator-indicator {
 	margin-right: 10px;
-***REMOVED***
+}
 
-.mute-collaborator-indicator-0 ***REMOVED***
+.mute-collaborator-indicator-0 {
 	color: @cursorRed;
 	.mute-collaborator-indicator;
-***REMOVED***
+}
 
-.mute-collaborator-indicator-1 ***REMOVED***
+.mute-collaborator-indicator-1 {
 	color: @cursorBlue;
 	.mute-collaborator-indicator;
-***REMOVED***
+}
 
-.mute-collaborator-indicator-2 ***REMOVED***
+.mute-collaborator-indicator-2 {
 	color: @cursorGreen;
 	.mute-collaborator-indicator;
-***REMOVED***
+}
 
-.mute-remote-cursor-0 ***REMOVED***
+.mute-remote-cursor-0 {
 	border-left: 2px solid @cursorRed;
-	.name, .nubbin ***REMOVED***
+	.name, .nubbin {
 		background-color: @cursorRed;
-	***REMOVED***;
+	};
 	.mute-remote-cursor;
-***REMOVED***
-.mute-remote-selection-0 ***REMOVED***
+}
+.mute-remote-selection-0 {
 	background-color: @selectionRed;
 	.mute-remote-selection
-***REMOVED***
-.mute-remote-cursor-1 ***REMOVED***
+}
+.mute-remote-cursor-1 {
 	border-left: 2px solid @cursorBlue;
-	.name, .nubbin ***REMOVED***
+	.name, .nubbin {
 		background-color: @cursorBlue;
-	***REMOVED***;
+	};
 	.mute-remote-cursor;
-***REMOVED***
-.mute-remote-selection-1 ***REMOVED***
+}
+.mute-remote-selection-1 {
 	background-color: @selectionBlue;
 	.mute-remote-selection
-***REMOVED***
-.mute-remote-cursor-2 ***REMOVED***
+}
+.mute-remote-cursor-2 {
 	border-left: 2px solid @cursorGreen;
-	.name, .nubbin ***REMOVED***
+	.name, .nubbin {
 		background-color: @cursorGreen;
-	***REMOVED***;
+	};
 	.mute-remote-cursor;
-***REMOVED***
-.mute-remote-selection-2 ***REMOVED***
+}
+.mute-remote-selection-2 {
 	background-color: @selectionGreen;
 	.mute-remote-selection
-***REMOVED***
+}
