--- a/assets/css/offline.css
+++ b/assets/css/offline.css
@@ -1,9 +1,9 @@
-.trash ***REMOVED*** color:rgb(209, 91, 71); ***REMOVED***
-.flag ***REMOVED*** color:rgb(248, 148, 6); ***REMOVED***
-.panel-body ***REMOVED*** padding:0px; ***REMOVED***
-.panel-footer .pagination ***REMOVED*** margin: 0; ***REMOVED***
-.panel .glyphicon,.list-group-item .glyphicon ***REMOVED*** margin-right:5px; ***REMOVED***
-.panel-body .radio, .checkbox ***REMOVED*** display:inline-block;margin:0px; ***REMOVED***
-.panel-body input[type=checkbox]:checked + label ***REMOVED*** text-decoration: line-through;color: rgb(128, 144, 160); ***REMOVED***
-.list-group-item:hover, a.list-group-item:focus ***REMOVED***text-decoration: none;background-color: rgb(245, 245, 245);***REMOVED***
-.list-group ***REMOVED*** margin-bottom:0px; ***REMOVED***
+.trash { color:rgb(209, 91, 71); }
+.flag { color:rgb(248, 148, 6); }
+.panel-body { padding:0px; }
+.panel-footer .pagination { margin: 0; }
+.panel .glyphicon,.list-group-item .glyphicon { margin-right:5px; }
+.panel-body .radio, .checkbox { display:inline-block;margin:0px; }
+.panel-body input[type=checkbox]:checked + label { text-decoration: line-through;color: rgb(128, 144, 160); }
+.list-group-item:hover, a.list-group-item:focus {text-decoration: none;background-color: rgb(245, 245, 245);}
+.list-group { margin-bottom:0px; }
