--- a/assets/css/range-selectors.css
+++ b/assets/css/range-selectors.css
@@ -1,11 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300);
 @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-body ***REMOVED***
+body {
     padding: 70px 0px;
-***REMOVED***
+}
 
-.range ***REMOVED***
+.range {
     display: flex;
     position: relative;
     height: 25px;
@@ -15,9 +15,9 @@ body ***REMOVED***
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-***REMOVED***
+}
 
-.range input[type="range"] ***REMOVED***
+.range input[type="range"] {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
     -ms-appearance: none !important;
@@ -29,8 +29,8 @@ body ***REMOVED***
     background-color: transparent;
     height: 25px;
     cursor: pointer;
-***REMOVED***
-.range input[type="range"]::-webkit-slider-thumb ***REMOVED***
+}
+.range input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
     -ms-appearance: none !important;
@@ -45,9 +45,9 @@ body ***REMOVED***
     vertical-align: baseline;
     border-radius: 0px;
     background-color: rgb(153, 153, 153);
-***REMOVED***
+}
 
-.range input[type="range"]::-moz-slider-thumb ***REMOVED***
+.range input[type="range"]::-moz-slider-thumb {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
     -ms-appearance: none !important;
@@ -62,9 +62,9 @@ body ***REMOVED***
     vertical-align: baseline;
     border-radius: 0px;
     background-color: rgb(153, 153, 153);
-***REMOVED***
+}
 
-.range output ***REMOVED***
+.range output {
     display: table-cell;
     padding: 3px 5px 2px;
     min-width: 40px;
@@ -90,76 +90,76 @@ body ***REMOVED***
     -moz-user-select: -moz-none;
     -o-user-select: none;
     user-select: none;
-***REMOVED***
-.range input[type="range"] ***REMOVED***
+}
+.range input[type="range"] {
     outline: none;
-***REMOVED***
+}
 
-.range.range-primary input[type="range"]::-webkit-slider-thumb ***REMOVED***
+.range.range-primary input[type="range"]::-webkit-slider-thumb {
     background-color: rgb(66, 139, 202);
-***REMOVED***
-.range.range-primary input[type="range"]::-moz-slider-thumb ***REMOVED***
+}
+.range.range-primary input[type="range"]::-moz-slider-thumb {
     background-color: rgb(66, 139, 202);
-***REMOVED***
-.range.range-primary output ***REMOVED***
+}
+.range.range-primary output {
     background-color: #fff;
     color: #333;
     border: 1px solid transparent;
     border-color: #ccc;
     padding-top: 2px;
-***REMOVED***
-.range.range-primary input[type="range"] ***REMOVED***
+}
+.range.range-primary input[type="range"] {
     outline-color: rgb(66, 139, 202);
-***REMOVED***
+}
 
-.range.range-success input[type="range"]::-webkit-slider-thumb ***REMOVED***
+.range.range-success input[type="range"]::-webkit-slider-thumb {
     background-color: rgb(92, 184, 92);
-***REMOVED***
-.range.range-success input[type="range"]::-moz-slider-thumb ***REMOVED***
+}
+.range.range-success input[type="range"]::-moz-slider-thumb {
     background-color: rgb(92, 184, 92);
-***REMOVED***
-.range.range-success output ***REMOVED***
+}
+.range.range-success output {
     background-color: rgb(92, 184, 92);
-***REMOVED***
-.range.range-success input[type="range"] ***REMOVED***
+}
+.range.range-success input[type="range"] {
     outline-color: rgb(92, 184, 92);
-***REMOVED***
+}
 
-.range.range-info input[type="range"]::-webkit-slider-thumb ***REMOVED***
+.range.range-info input[type="range"]::-webkit-slider-thumb {
     background-color: rgb(91, 192, 222);
-***REMOVED***
-.range.range-info input[type="range"]::-moz-slider-thumb ***REMOVED***
+}
+.range.range-info input[type="range"]::-moz-slider-thumb {
     background-color: rgb(91, 192, 222);
-***REMOVED***
-.range.range-info output ***REMOVED***
+}
+.range.range-info output {
     background-color: rgb(91, 192, 222);
-***REMOVED***
-.range.range-info input[type="range"] ***REMOVED***
+}
+.range.range-info input[type="range"] {
     outline-color: rgb(91, 192, 222);
-***REMOVED***
+}
 
-.range.range-warning input[type="range"]::-webkit-slider-thumb ***REMOVED***
+.range.range-warning input[type="range"]::-webkit-slider-thumb {
     background-color: rgb(240, 173, 78);
-***REMOVED***
-.range.range-warning input[type="range"]::-moz-slider-thumb ***REMOVED***
+}
+.range.range-warning input[type="range"]::-moz-slider-thumb {
     background-color: rgb(240, 173, 78);
-***REMOVED***
-.range.range-warning output ***REMOVED***
+}
+.range.range-warning output {
     background-color: rgb(240, 173, 78);
-***REMOVED***
-.range.range-warning input[type="range"] ***REMOVED***
+}
+.range.range-warning input[type="range"] {
     outline-color: rgb(240, 173, 78);
-***REMOVED***
+}
 
-.range.range-danger input[type="range"]::-webkit-slider-thumb ***REMOVED***
+.range.range-danger input[type="range"]::-webkit-slider-thumb {
     background-color: rgb(217, 83, 79);
-***REMOVED***
-.range.range-danger input[type="range"]::-moz-slider-thumb ***REMOVED***
+}
+.range.range-danger input[type="range"]::-moz-slider-thumb {
     background-color: rgb(217, 83, 79);
-***REMOVED***
-.range.range-danger output ***REMOVED***
+}
+.range.range-danger output {
     background-color: rgb(217, 83, 79);
-***REMOVED***
-.range.range-danger input[type="range"] ***REMOVED***
+}
+.range.range-danger input[type="range"] {
     outline-color: rgb(217, 83, 79);
-***REMOVED***
+}
